--- a/.github/workflows/ofox_tanzanite.yml
+++ b/.github/workflows/ofox_tanzanite.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Build
       uses: linastorvaldz/orangefox-builder-action@master
       with:
-        USER_NAME: eraselk
-        USER_EMAIL: eraselk@proton.me
+        USER_NAME: imnathanzero
+        USER_EMAIL: nathannxx@proton.me
         FOX_SYNC_BRANCH: 12.1
         DEVICE_TREE: https://github.com/DVWorkspaces/device_xiaomi_tanzanite_recovery
         DEVICE_TREE_BRANCH: temp
